--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,8 @@
         android:gravity="center"
         android:text="SIGN IN"
         android:textColor="@color/white"
-        android:textSize="22dp"
+        android:textSize="35dp"
+        android:fontFamily="@font/bebas_neue_regular"
         app:layout_constraintBottom_toTopOf="@+id/button_sign_up_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -65,7 +66,8 @@
         android:gravity="center"
         android:text="SIGN UP"
         android:textColor="@color/white"
-        android:textSize="22dp"
+        android:textSize="35dp"
+        android:fontFamily="@font/bebas_neue_regular"
         app:layout_constraintBottom_toBottomOf="@+id/backdropcard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
