--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -50,10 +49,12 @@
         android:ems="15"
         android:inputType="textPersonName"
         android:text="Username"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/backdrop" />
+        app:layout_constraintTop_toTopOf="@+id/backdrop"
+        app:layout_constraintVertical_bias="0.027" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/password_sign_in"
@@ -63,9 +64,12 @@
         android:ems="15"
         android:inputType="textPassword"
         android:text="Password"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_sign_in" />
+        app:layout_constraintTop_toBottomOf="@+id/username_sign_in"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_log_in"
@@ -75,9 +79,12 @@
         android:gravity="center"
         android:text="LOG IN"
         android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_sign_in" />
+        app:layout_constraintTop_toBottomOf="@+id/password_sign_in"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textLog"
@@ -85,30 +92,37 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="LOG IN WITH"
-        android:textSize="18dp"
         android:textColor="@color/black"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_log_in" />
+        app:layout_constraintTop_toBottomOf="@+id/button_log_in"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/google_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/facebook_sign_up"
-        app:layout_constraintTop_toBottomOf="@+id/textLog"
-        app:srcCompat="@drawable/google_logo"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.804"
+        app:srcCompat="@drawable/google_logo" />
 
     <ImageView
         android:id="@+id/facebook_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/facebook_logo"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="228dp"
-        tools:layout_editor_absoluteY="453dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.623"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.805"
+        app:srcCompat="@drawable/facebook_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
