--- a/app/src/main/res/layout/cardview_genres_movies.xml
+++ b/app/src/main/res/layout/cardview_genres_movies.xml
@@ -18,6 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_margin="16dp"
+
             android:text="Movie Genre"
             android:textSize="32sp"
             android:fontFamily="@font/bebas_neue_regular"
