--- a/app/src/main/res/layout/cardview_genres_series.xml
+++ b/app/src/main/res/layout/cardview_genres_series.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="240dp"
     android:layout_margin="8dp"
+
     android:orientation="vertical"
     app:cardCornerRadius="16dp"
     app:cardElevation="16dp">
@@ -17,6 +18,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:layout_margin="16dp"
 
             android:text="Serie Genre"
             android:textSize="32sp"
