--- a/app/src/main/res/layout/cardview_movie.xml
+++ b/app/src/main/res/layout/cardview_movie.xml
@@ -11,11 +11,12 @@
     android:orientation="vertical"
     android:theme="@style/Theme.7ART">
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_movie_image"
 
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
 
         android:layout_gravity="center_horizontal"
 
@@ -30,10 +31,11 @@
 
         <ImageView
             android:id="@+id/movie_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:src="@drawable/avengers_endgame" />
+            android:src="@drawable/platoon" />
 
     </androidx.cardview.widget.CardView>
 
@@ -54,34 +56,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/clock_icon"
-            android:layout_width="18dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/clock"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
-
-        <TextView
-            android:id="@+id/movie_length"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_semibold"
-            android:gravity="center_vertical"
-            android:padding="8dp"
-            android:text="120 minutos"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/clock_icon"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
         <ImageView
             android:id="@+id/star_icon"
             android:layout_width="18dp"
             android:layout_height="wrap_content"
             android:src="@drawable/star_icon"
-            app:layout_constraintEnd_toStartOf="@+id/movie_score"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.65"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title"
+            tools:ignore="NotSibling" />
 
         <TextView
             android:id="@+id/movie_score"
@@ -92,7 +77,7 @@
             android:textColor="@color/black"
             android:padding="8dp"
             android:fontFamily="@font/nunito_semibold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/star_icon"
             app:layout_constraintTop_toBottomOf="@+id/movie_title"
             tools:ignore="NotSibling" />
 
@@ -100,10 +85,12 @@
             android:id="@+id/calendar_icon"
             android:layout_width="18dp"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.45"
+            android:layout_marginTop="52dp"
             android:src="@drawable/calendar"
-            app:layout_constraintStart_toStartOf="@id/clock_icon"
-            app:layout_constraintEnd_toEndOf="@+id/movie_score"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardview_movie_image"
             tools:ignore="NotSibling" />
 
