--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password_sign_up" />
 
     <Button
-        android:id="@+id/button_sign_up"
+        android:id="@+id/button_sign_up_log_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
