--- a/app/src/main/res/layout/cardview_movie.xml
+++ b/app/src/main/res/layout/cardview_movie.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
+    app:cardCornerRadius="28dp"
+    android:elevation="0dp"
     android:layout_margin="8dp"
 
     android:background="@color/white"
@@ -132,4 +133,4 @@
 <!--        android:justificationMode="inter_word"/>-->
 
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
