--- a/app/src/main/res/layout/activity_serie_recommendations.xml
+++ b/app/src/main/res/layout/activity_serie_recommendations.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.7ART.NoActionBar"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -19,7 +20,7 @@
             android:text="series"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:fontFamily="@font/nunito_extra_light"
+            android:fontFamily="@font/nunito_semibold"
             android:layout_gravity="center"
             android:textSize="24sp"/>
 
