--- a/app/src/main/res/drawable/white_card_top_rounded.xml
+++ b/app/src/main/res/drawable/white_card_top_rounded.xml
@@ -8,7 +8,7 @@
     <!-- View border color and width -->
     <stroke
         android:width="2dp"
-        android:color="@color/black"/>
+        android:color="@color/white"/>
 
     <!-- The radius makes the corners rounded -->
     <corners
