--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,21 +10,25 @@
     tools:context=".view.login.activities.LoginActivity">
 
     <ImageView
-        android:id="@+id/art"
+        android:id="@+id/logo_7art"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginVertical="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_7art" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_height="160sp"
         android:background="@drawable/black_card_top_rounded"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo_7art"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/button_sign_in_login"
@@ -38,7 +42,7 @@
             android:gravity="center_horizontal"
             android:text="@string/sign_in"
             android:textColor="@color/white"
-            android:textSize="32sp"/>
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button_sign_up_login"
@@ -52,9 +56,9 @@
             android:gravity="center_horizontal"
             android:text="@string/sign_up"
             android:textColor="@color/white"
-            android:textSize="32sp"/>
+            android:textSize="32sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
